CHANGELOG for ACL for Drupal 7

acl 7.x-1.x-dev:
  Enhancements:
    - Add acl_has_user($acl_id, $uid) API function.
  Port to D7:
    - #836822: Fix some porting errors.
    - Fix line endings (no functional change).
    - #798106: Convert another left-over db_result() call.
    - #824642: Avoid type conversion problems when FALSE is passed rather than 0.
    - #798106: Fix incomplete porting (db_query).
    - #761696: Simpletests: provide some dummy files.
    - #798108: Remove drupal_install_schema() and drupal_uninstall_schema() calls.
    - Port database statements.
    - Use 6.x-1.1 and fix the applicable Coder errors.


acl 6.x-1.1 (2010-01-24):
  Bugs fixed:
    - #680324: Add missing index if upgraded from D5.
  Enhancements:
    - Clean up some minor coder issues (no functional changes).

acl 6.x-1.0 (2009-06-03):
  Enhancements:
    - #243073: Update Swedish translation and add .pot file.

acl 6.x-1.x-RC1 (2009-04-29):
  Enhancements:
    - #369918: Add German translation.
  Bugs fixed:
    - #371446: Use priority for the 'deny' grant, too.

acl 6.x-1.x-BETA4 (2009-01-29):
  Enhancements:
    - Factor out form code into .inc file.
    - Enable grant priority.
    - Add new acl_get_uids() function.

acl 6.x-1.x-BETA3 (2009-01-03):
  Bugs fixed:
    - Fix upgrade path from D5 (change acl_id column to auto_increment).

acl 6.x-1.x-BETA2 (2008-10-14):
  Bugs fixed:
    - #205012, by fago: Fixed the acl form to work correctly when integrated more than once into a form.

acl 6.x-1.x-BETA1 (2008-10-14):
  Porting to D6:
    - Fix cosmetic coder issues (no functional change).
    - #243073: Add Swedish translation.
    - Improve hook_node_access_explain().
    - #135687: Implement grant priority.
    - #229451: Allow acl_edit_form() without pre-created acl_id.    
    - Implement hook_user('delete') and remove orphaned {acl_user} records.
    - #232413: Fix error message when removing the last moderator.